manifests/seraphim/prod/calibre/Namespace-calibre.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: calibre
