manifests/seraphim/prod/calibre/Service-calibre.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: calibre
    app.kubernetes.io/name: calibre
    app.kubernetes.io/part-of: calibre
    app.kubernetes.io/version: dev
  name: calibre
  namespace: calibre
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: calibre
