manifests/seraphim/prod/calibre/HTTPRoute-calibre.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "10"
  labels:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: calibre
    app.kubernetes.io/name: calibre
    app.kubernetes.io/part-of: calibre
    app.kubernetes.io/version: 0.6.25
  name: calibre
  namespace: calibre
spec:
  hostnames:
    - calibre.vegapunk.cloud
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: gateway
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: calibre
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
